crates/parser/tests/cases/snapshots/cases__errors__module_bad_stmt.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(module_bad_stmt), module::parse_module, \"if x { y }\")"

---
error: failed to parse module
  ┌─ module_bad_stmt:1:1
  │
1 │ if x { y }
  │ ^^ unexpected token
  │
  = Note: expected import, contract, struct, type or const


